# ImageMapper

./: .gitignore  Cargo.toml  LICENSE  README.md
docker/: Dockerfile  build-tag-and-save-image.sh  common.sh  docker-compose-example.yaml  docker-compose.yaml  healthcheck.sh  run.sh  tag-and-save-image.sh
src/: arguments.rs  file_names.rs  image.rs  lib.rs  main.rs  mapper.rs  settings.rs
src/mapper/: tests.rs
