[package]
name = "image_mapper"
version = "0.1.0"
authors = ["Oskar Lundström <21679735+osklunds@users.noreply.github.com>"]
edition = "2018"

[dependencies]
image = "0.24.2"
kamadak-exif = "0.5.5"
tempfile = "3.1.0"
clap = "2.33.0"
unwrap = "1.2.1"
regex = "1.10.6"
lazy_static = "1.5.0"

[profile.release]
lto = true